Add color picker

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,16 @@
             style="@style/Widget.AppCompat.ButtonBar"
             android:background="@color/colorPrimary"
             android:textColor="@color/colorWhite"
+            android:id="@+id/btn_color_picker"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/color" />
+
+        <Button
+            style="@style/Widget.AppCompat.ButtonBar"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
             android:id="@+id/btn_clear"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
