--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,17 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorRed">#FF0000</color>
+
+    <color name="colorBlue">#0000FF</color>
+    <color name="colorGreen">#008000</color>
+    <color name="colorYellow">#FFFF00</color>
+
+    <color name="colorOrange">#FFA500</color>
+    <color name="colorPurple">#800080</color>
+    <color name="colorPink">#FFC0CB</color>
+
 </resources>
