--- a/app/src/main/res/menu/shape_menu.xml
+++ b/app/src/main/res/menu/shape_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/shape_point_menu_item"
@@ -12,8 +11,8 @@
             android:id="@+id/shape_rect_menu_item"
             android:title="@string/shape_rect" />
         <item
-            android:checked="true"
             android:id="@+id/shape_ellipse_menu_item"
+            android:checked="true"
             android:title="@string/shape_ellipse" />
         <item
             android:id="@+id/shape_circle_menu_item"
@@ -21,6 +20,9 @@
         <item
             android:id="@+id/shape_line_with_2circle"
             android:title="@string/shape_line_with_2circle" />
+        <item
+            android:id="@+id/shape_cube"
+            android:title="@string/shape_cube" />
     </group>
 
 </menu>
