--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -70,7 +71,22 @@
     <com.maximperevalov.shapeeditor.views.ShapeEditorView
         android:id="@+id/shape_editor"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom" />
+        android:layout_height="0dp"
+        android:layout_weight="0.8" />
+
+    <ScrollView
+        android:id="@+id/table_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:visibility="gone">
+
+        <com.maximperevalov.shapeeditor.table.ShapeTable
+            android:id="@+id/shape_table"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top" />
+
+    </ScrollView>
 
 </LinearLayout>
